k8s/dev/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: phone-store
spec:
  type: ClusterIP
  selector:
    tier: app
  ports:
    - port: 8080
      targetPort: 8080
